runtime(wave): add Java 17 --add-opens to application JVM args; docs: mark P2-T5 completed; chore: add scripts/wave-smoke.sh\n\n- wave/build.gradle: add --add-opens for java.base modules required by Guice/cglib on JDK 17\n- docs/modernization-plan.md: mark P2-T5 Completed; note add-opens requirement; update changelog\n- scripts/wave-smoke.sh: helper to start/stop/status/check installed server